--- a/index.html
+++ b/index.html
@@ -1,144 +1,53 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Keerthi S | AI/ML Engineer</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      scroll-behavior: smooth;
-    }
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      background-color: #ffffff;
-      color: #333;
-    }
-    header {
-      background: linear-gradient(to right, #000, #222);
-      color: white;
-      padding: 60px 20px;
-      text-align: center;
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-      background-color: #111;
-    }
-    nav a {
-      color: white;
-      padding: 1rem;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    nav a:hover {
-      background-color: #333;
-    }
-    section {
-      padding: 60px 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
-    h2 {
-      border-bottom: 2px solid #000;
-      padding-bottom: 0.3rem;
-    }
-    .skills-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-      gap: 10px;
-    }
-    .project {
-      margin-bottom: 2rem;
-    }
-    footer {
-      background-color: #000;
-      color: #fff;
-      text-align: center;
-      padding: 2rem;
-    }
-    .contact a {
-      color: #00bcd4;
-      display: block;
-      margin: 5px 0;
-      text-decoration: none;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
+  <script defer src="script.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-  <header>
-    <h1>Keerthi S</h1>
-    <p>AI/ML Engineer | Python Developer | Cloud Enthusiast</p>
-  </header>
-
-  <nav>
-    <a href="#about">About</a>
-    <a href="#skills">Skills</a>
-    <a href="#projects">Projects</a>
-    <a href="#experience">Experience</a>
-    <a href="#contact">Contact</a>
-  </nav>
-
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I'm an AI/ML engineer with experience in building intelligent systems to solve real-world problems. Skilled in Python, machine learning pipelines, and cloud deployments, I'm passionate about transforming data into actionable insights and scalable solutions.</p>
-  </section>
-
-  <section id="skills">
-    <h2>Skills</h2>
-    <div class="skills-grid">
-      <div>Python</div><div>C</div><div>R</div><div>TensorFlow</div><div>Scikit-learn</div><div>PyTorch</div><div>Keras</div>
-      <div>Pandas</div><div>NumPy</div><div>Matplotlib</div><div>AWS</div><div>Jupyter</div><div>VS Code</div>
-      <div>Tableau</div><div>Excel</div><div>MySQL</div>
+  <section class="hero" id="hero">
+    <div class="container">
+      <h1>Hi, I'm Keerthi S</h1>
+      <p><span class="typed-text">AI/ML Engineer | Python Developer | Cloud Enthusiast</span></p>
+      <a href="#contact" class="btn">Contact Me</a>
     </div>
   </section>
 
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="project">
-      <h3>Camouflage Army Robot</h3>
-      <p>Intelligent robotic system with adaptive camouflage and real-time analytics for tactical simulation.</p>
-    </div>
-    <div class="project">
-      <h3>Diabetes Prediction Using ML</h3>
-      <p>Built a deep learning model to predict diabetes recurrence using MLPClassifier. Achieved 78% accuracy.</p>
-    </div>
-    <div class="project">
-      <h3>Genomic Data EDA Pipeline</h3>
-      <p>Designed AI-driven pipeline to extract patterns from complex genomic datasets.</p>
-    </div>
-    <div class="project">
-      <h3>Crop Recommendation System</h3>
-      <p>ML model that suggests optimal crops based on soil and environmental data.</p>
-    </div>
-    <div class="project">
-      <h3>Supermarket Billing System</h3>
-      <p>Mobile-based smart billing application enabling real-time checkout and item search.</p>
-    </div>
+  <section id="about"><h2>About</h2>
+    <p>AI & ML enthusiast with a strong foundation in software development and cloud integration...</p>
   </section>
 
-  <section id="experience">
-    <h2>Experience</h2>
+  <section id="projects"><h2>Projects</h2>
     <ul>
-      <li>AI-ML Engineer Intern – Rooman Technologies & IBM (Sep 2024 - Mar 2025)</li>
-      <li>Cloud Computing Intern – Rooman Technologies & IBM (Jan 2025 - Feb 2025)</li>
-      <li>Python Intern – ID Tech Solutions Pvt Ltd (Jan 2024 - Mar 2024)</li>
-      <li>AI ML Intern – Knowx Innovations Pvt. Ltd (Nov 2023 - Dec 2023)</li>
+      <li><strong>Camouflage Army Robot</strong> – Robotic system with adaptive camouflage and real-time analytics.</li>
+      <li><strong>Genomic Data EDA</strong> – AI pipeline for analyzing genomic datasets.</li>
+      <li><strong>Diabetes Prediction</strong> – MLP-based deep learning for healthcare insight.</li>
+      <li><strong>Crop Recommendation</strong> – Suggests crops using environmental data.</li>
+      <li><strong>Billing System</strong> – Smart checkout app for supermarkets.</li>
     </ul>
   </section>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <div class="contact">
-      <a href="mailto:keerthisy2003@gmail.com">keerthisy2003@gmail.com</a>
-      <a href="tel:+916360807707">+91 63608 07707</a>
-      <a href="https://linkedin.com/in/keerthi9" target="_blank">LinkedIn: linkedin.com/in/keerthi9</a>
-    </div>
+  <section id="skills"><h2>Skills</h2>
+    <p>Python, TensorFlow, PyTorch, Scikit-learn, AWS, MySQL, Tableau, Excel, etc.</p>
   </section>
 
-  <footer>
-    <p>© 2025 Keerthi S. All rights reserved.</p>
-  </footer>
+  <section id="experience"><h2>Experience</h2>
+    <ul>
+      <li>AI-ML Intern – Rooman & IBM (Sep 2024 - Mar 2025)</li>
+      <li>Cloud Intern – Rooman & IBM (Jan 2025 - Feb 2025)</li>
+      <li>Python Intern – I D Tech Solutions (Jan 2024 - Mar 2024)</li>
+    </ul>
+  </section>
+
+  <section id="contact"><h2>Contact</h2>
+    <p>Email: keerthisy2003@gmail.com</p>
+    <p>Phone: +91 63608 07707</p>
+    <p><a href="https://linkedin.com/in/keerthi9">LinkedIn</a></p>
+  </section>
 </body>
 </html>
